# LuaGameServer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  client.cpp
dbserver/: CMakeLists.txt  README.md  dbServer.cpp  dbServer.h  dbserver.xml  gameSession.cpp  gameSession.h  main.cpp
dbserver/MySQL/: mysqlHandler.cpp  mysqlHandler.h
dbserver/Mysql/: dbsql.cpp  dbsql.h
dbserver/Redis/: redisHandler.cpp  redisHandler.h
gameserver/: CMakeLists.txt  README.md  callLua.cpp  callLua.h  cliManager.cpp  cliManager.h  config.h  config.xml  dbSession.cpp  dbSession.h  gateSession.cpp  gateSession.h  luaFuncInterface.cpp  luaFuncInterface.pkg  luaInterface.cpp  luaInterface.h  main.cpp  player.cpp  player.h  scheduler.cpp  scheduler.h  tolua_fix.c  world.cpp  world.h
gameserver/system/: README.md  itemSystem.lua  main.lua  proto.lua  timer_queue.lua  user.lua  util.lua
gateway/: CMakeLists.txt  clientServer.cpp  clientServer.h  clientSession.cpp  clientSession.h  gameServer.cpp  gameServer.h  gameSession.cpp  gameSession.h  gateway.xml  global.cpp  global.h  main.cpp
server/: README.md
server/base/: basic.h  common.h  error.h
server/proto/: base.proto  cs.proto  gs.proto  sr.proto
server/protocol/in/: base.pb  base.pb.cc  base.pb.h  gs.pb.cc  gs.pb.h  sr.pb  sr.pb.cc  sr.pb.h
